# AI-ATC

./: .gitignore  1CMakeLists.txt  CMakeLists.txt  OLD_bt-autoconnect.sh  OLD_bt-setup.sh  README.md  bt-setup.sh  dev.sh  initial.sh  initial.txt  old_readme.md  rpi-toolchain.cmake
RF24/: RF24.h
data/: Makefile  flight_1.db-shm  flight_1.db-wal  flight_5.db-shm  flight_5.db-wal  flight_6.db-shm  flight_6.db-wal
include/: ButtonCombos.h  Coles_SQL.h  Common.h  CommonTools.h  ControllerFeatures.h  DatabaseManager.hpp  DatabasePacket.hpp  EventTypes.h  FlightDatabase.h  GPS_Coordinate.h  GameController.h  Logging.h  PIDFeature.h  QuickThread.h  RadioTx.h  RadioTxQueue.h  SQL.h  Schema.h  Serialization.h  Session.h  SessionControl.h  Session_NEW.h  SmartPID.h  SyncedObjects.h  SystemMode.h  ThreadSafeArray.h  ThreadSafeQueue.h  WebSocketPacket.hpp  WebSocketQueue.hpp  Webserver.hpp  atc.h  common_map.h  main.h  pi_ble.h  rf_com.h  system_modes.h
install/: 90-bt-autoconnect.rules  TODO_pair_controller.sh  boot-config.txt  boot.sh  bt-autoconnect.sh  bt-setup.sh  bt_main.conf  initial.sh  my_RF24.h  my_spi.h  new_main.conf
new_data/: flight_5.db-shm  flight_5.db-wal
resources/: GPS_NMEA.txt  PS5 Button Actions.txt  atc_schema.sql  pinout.txt
src/: AI-ATC_Tools.cpp  ARD_Pi_time.h  ARD_time.h  Bitmask.h  ButtonCombos.h  CMakeLists.txt  Common.h  CommonTools.cpp  DB.h  DatabaseTable.h  EventTypes.h  FAT_GameController.cpp  FlightDatabase.cpp  FlightDatabase.h  FlightSession.h  GameController.cpp  GameController.h  Logging.cpp  Logging.h  OLD_rf_rx.h  PID.h  Radio.h  RadioTx.cpp  Runway.h  SDL2_GameController.cpp  SQL.cpp  SQL.h  Schema1.h  Session.cpp  Session.h  SyncedObjects.h  TestSync.cpp  as_bits.h  atc.cpp  atc.h  ctest2.cpp  haversine.h  main.cpp  myTime.cpp  rf_com.h  (+4 more)
src/ControlModes/: AssistControlMode.cpp  AssistControlMode.h  AutoControlMode.cpp  AutoControlMode.h  EmergencyControlMode.cpp  EmergencyControlMode.h  HoldingControlMode.cpp  HoldingControlMode.h  ManualControlMode.cpp  ManualControlMode.h  PairingControlMode.cpp  PairingControlMode.h  RecoveryControlMode.cpp  RecoveryControlMode.h  TaxiControlMode.cpp  TaxiControlMode.h
src/Development/: ATC_DB.h  CLASS.sql  ControllerData.h  DatabaseManager.h  OLD_DB.h  RF24_readPayload.cpp  SQL.cpp  System.h  TaggedValues.cpp  main_thread.cpp  multi_thread.cpp  old_packets.h  sql_orm.cpp  test_bytes.h
src/FUTURE_USE/: Bitmask.h  EventActions.h  EventActions0.h  EventActions1.h  ThreadPool.h
src/FlightPhases/: FlightPhases.h
src/NO_LONGER_USED_TOPIC/: ORIGINAL_FlightDatabase.cpp  ORIGINAL_FlightDatabase.h  ORIGINAL_GameController.cpp  ORIGINAL_Logging.cpp  ORIGINAL_Schema.h  PacketProcess.h  Schema.cpp  Session_FAT.h  Session_OLD.cpp  common_map.cpp  rf_tx.h  rx_processing_queue.cpp  thread_SQL.cpp  thread_SQL.hpp  thread_controller.c
src/OLD_VERSIONS/: EventTypes0.h  OLD_GameController.cpp  OLD_GameController0.cpp
src/packets/: Accel.cpp  Assist.cpp  Auto.cpp  Barometer.cpp  Event.cpp  EventData16.cpp  EventData32.cpp  EventData64.cpp  EventData8.cpp  EventTimed.cpp  EventTimedData.cpp  GPS.cpp  GPS_Env.cpp  Gyro.cpp  Magnet.cpp  Manual.cpp  PID.cpp  Temp-Humid.cpp  packets.c
src/threads/: atc_threads.h  thread_SQL.h  thread_controller.cpp  thread_controller.h  thread_packet_process.cpp  thread_packet_process.h  thread_rf_rx.cpp  thread_rf_rx.h  thread_rf_tx.cpp  thread_rf_tx.h
test/: OLD_rf_test.cpp  ctest.cpp  ctest0.cpp  ctest1.cpp  nano_pilot_rf_test.cpp  (+7 more)
(+58 files in other folders)
